What's New
==========

v0.0.4
------

 * fixed i18n support.
 * added --version and --help options.
 * added manpage.

v0.0.3
------

 * fixed window close to terminate the application.
 * added README.
 * generated HTML version of README and NEWS files.
 * added fr translation and i18n support.

v0.0.2
------

 * added refresh keyboard shortcut (ALT-r).
 * added new task keyboard shortcut (ALT-n).
 * renamed ptask to gtask.

v0.0.1
------

 * Initial release.