@@ -7,6 +7,7 @@ v0.0.4
  * fixed i18n support.
  * added --version and --help options.
  * added manpage.
+ * popup error dialog when .taskrc does not exist.
 
 v0.0.3
 ------
